- Some QList -> QValueList
  (no stuff like 'QList<int> lst; lst.append( new int( 3 ) );' needed anymore :-)
- Objects disappearing in screenpresentations works (ony without effects at the moment,
  but effects will come!)
- Creating webpresentations works again (API of QWizard changed a bit...)

Reggie, 30.5.1999:
------------------
- Setting linespacing, parag-dist (before and after) and depth is applied
  to all selected parags if there are selected some.
- First effects for disappearing objects are working (go to left, right, top and bottom)

Reggie, 31.5.1999:
------------------
- Fixes in effects for disappearing objs
- Implemented more effects for disappearing objs

Reggie, 1.6.1999:
-----------------
- Fix in saving pictures/cliparts inline

Reggie, 2.6.1999:
-----------------
- Implemented for Textobjects: Resize object to fit contents
  (How is this called in real english? :-)
- Started implementing "Copy page" - doesn't do anything yet...

Reggie, 5.6.1999:
-----------------
- KRect/KPoint/KSize -> QRect/QPoint/QSize
- Some source cleanups
- More work on copying pages

Reggie, 6.6.1999:
-----------------
- It's now possible to choose for screenpresentations, if
  - all slides should be shown
  - only the current slide should be shown (that's the slide/page which is the current one in edit mode
    at the moment)
  - selected ones should be shown (you can select them in a listview)
  All this configuration can be done in the page-config dialog (menu Screenpresentations).
  The second point (only current slide) is also convinient, when you are just creating/editing
  a presentation to view only the slide on which you currently are working for testing :-)

Reggie, 11.6.1999:
------------------
- Fixed saving pixmap collection (pixmaps which are
  only in the undo-buffer but not really used anymore
  are not saved)

Reggie, 12.6.1999:
------------------
- Implemented resizing objects with keeping constraints 
  (when pressing Control while resizing)
- Fixes